<?xml version="1.0"?>
<package format="2">.
  <name>vehicle_msgs</name>
  <version>0.0.0</version>
  <description>vehicle CAN related message types.</description>

  <maintainer email="aksuvos@gmail.com">Gihwan Jo</maintainer>
  <author email="aksuvos@gmail.com">Gihwan Jo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
